--- a/src/components/Notifications/RuleSimple/RuleSimple.scss
+++ b/src/components/Notifications/RuleSimple/RuleSimple.scss
@@ -1,84 +1,90 @@
-.react-autoql-notification-rule-container {
-  display: flex;
-  align-items: flex-end;
-
-  .react-autoql-rule-input {
-    .react-autoql-input-icon.react-autoql-bubbles-outlined {
-      font-size: 18px !important;
-    }
+.react-autoql-rule-simple {
+  &.with-query-validation .react-autoql-rule-condition-select-input-container {
+    margin-bottom: 30px;
   }
 
-  .rule-second-input-type-select {
-    text-decoration: underline;
-    cursor: pointer;
-  }
-
-  .react-autoql-input-container,
-  .react-autoql-rule-condition-select {
-    margin: 0 !important;
-  }
-  .react-autoql-input-container:hover + .react-autoql-rule-term-type-selector,
-  .react-autoql-input-container.focus + .react-autoql-rule-term-type-selector {
-    color: var(--react-autoql-accent-color);
-    border-color: var(--react-autoql-accent-color);
-  }
-
-  .react-autoql-rule-input {
+  .react-autoql-notification-rule-container {
     display: flex;
-    flex-direction: column;
-    flex: 1;
+    align-items: flex-end;
+    margin-top: 5px;
 
-    .react-autoql-input-icon.react-autoql-bubbles-outlined {
-      padding-bottom: 2px;
-    }
-  }
-
-  .react-autoql-rule-first-input-container {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    margin-bottom: 28px;
-  }
-
-  .react-autoql-rule-condition-select-input-container {
-    display: flex;
-    flex-direction: column;
-    padding: 2px 0;
-    border-radius: 4px;
-    transition: all 0.3s ease;
-    flex: 0 0 auto;
-    margin-right: 12px;
-    margin-bottom: 50px;
-  }
-
-  .react-autoql-rule-second-input-container {
-    display: flex;
-    flex-direction: column;
-    padding: 2px 0;
-    border-radius: 4px;
-    transition: all 0.3s ease;
-    flex: 1;
-
-    .react-autoql-rule-condition-select {
-      flex: 0;
-      flex-basis: 33px;
-      height: 39px;
-    }
     .react-autoql-rule-input {
-      flex: 1;
-    }
-    .react-autoql-delete-compare-btn {
-      cursor: pointer;
-      opacity: 0.6;
-      padding: 6px;
-
-      &:hover {
-        opacity: 1;
+      .react-autoql-input-icon.react-autoql-bubbles-outlined {
+        font-size: 18px !important;
       }
     }
 
-    &.hidden {
-      display: none;
+    .rule-second-input-type-select {
+      text-decoration: underline;
+      cursor: pointer;
+    }
+
+    .react-autoql-input-container,
+    .react-autoql-rule-condition-select {
+      margin: 0 !important;
+    }
+    .react-autoql-input-container:hover + .react-autoql-rule-term-type-selector,
+    .react-autoql-input-container.focus + .react-autoql-rule-term-type-selector {
+      color: var(--react-autoql-accent-color);
+      border-color: var(--react-autoql-accent-color);
+    }
+
+    .react-autoql-rule-input {
+      display: flex;
+      flex-direction: column;
+      flex: 1;
+
+      .react-autoql-input-icon.react-autoql-bubbles-outlined {
+        padding-bottom: 2px;
+      }
+    }
+
+    .react-autoql-rule-first-input-container {
+      display: flex;
+      flex-direction: column;
+      flex: 1;
+      margin-bottom: 28px;
+    }
+
+    .react-autoql-rule-condition-select-input-container {
+      display: flex;
+      flex-direction: column;
+      padding: 2px 0;
+      border-radius: 4px;
+      transition: all 0.3s ease;
+      flex: 0 0 auto;
+      margin-right: 12px;
+    }
+
+    .react-autoql-rule-second-input-container {
+      display: flex;
+      flex-direction: column;
+      padding: 2px 0;
+      border-radius: 4px;
+      transition: all 0.3s ease;
+      flex: 1;
+
+      .react-autoql-rule-condition-select {
+        flex: 0;
+        flex-basis: 33px;
+        height: 39px;
+      }
+      .react-autoql-rule-input {
+        flex: 1;
+      }
+      .react-autoql-delete-compare-btn {
+        cursor: pointer;
+        opacity: 0.6;
+        padding: 6px;
+
+        &:hover {
+          opacity: 1;
+        }
+      }
+
+      &.hidden {
+        display: none;
+      }
     }
   }
 }
@@ -88,8 +94,13 @@
   align-items: center;
   margin-top: 3px;
   font-weight: 600;
+  padding: 3px 5px;
+  margin-bottom: 20px;
+  margin-top: 10px;
 
   .data-alert-rule-tooltip-icon {
+    margin: 0;
+    padding: 0;
     margin-left: 10px;
     color: var(--react-autoql-text-color-placeholder);
     opacity: 0.6;
@@ -120,7 +131,7 @@
   display: flex;
   justify-content: flex-end;
   padding-top: 5px;
-  height: 50px;
+  height: 30px;
 
   .expression-term-validation {
     display: inline-flex;
