--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -1,56 +1,80 @@
-.react-autoql-select {
+.react-autoql-select-popover-container {
+  margin: 0 6px;
+}
+
+.react-autoql-select-and-label {
   display: inline-flex;
-  justify-content: space-between;
-  line-height: 36px;
-  height: 38px;
-  transition: color 0.2s ease, border-color 0.2s ease;
-  white-space: nowrap;
-  font-size: inherit;
-  cursor: pointer;
+  flex-direction: column;
+  padding: 2px 5px;
 
-  &:hover {
-    color: var(--react-autoql-accent-color, #26a7df);
-    .react-autoql-select-arrow {
-      color: var(--react-autoql-accent-color, #26a7df);
+  &.react-autoql-select-full-width {
+    display: flex;
+  }
+
+  .react-autoql-select {
+    display: inline-flex;
+    justify-content: space-between;
+    transition: color 0.2s ease, border-color 0.2s ease;
+    white-space: nowrap;
+    font-size: inherit;
+    cursor: pointer;
+
+    &.react-autoql-select-large {
+      line-height: 36px;
+      height: 38px;
     }
-  }
 
-  &:not(.outlined) {
-    font-weight: 600;
-    padding: 0 10px;
-    margin: 0;
-  }
-
-  &.outlined {
-    margin: 0 3px;
-    padding: 0px 16px;
-    color: var(--react-autoql-text-color-primary);
-    border: 1px solid var(--react-autoql-border-color);
-    border-radius: 4px;
-    background: var(--react-autoql-background-color-secondary, white);
+    &.react-autoql-select-small {
+      line-height: 32px;
+      height: 34px;
+    }
 
     &:hover {
-      color: var(--react-autoql-accent-color);
-      border-color: var(--react-autoql-accent-color);
+      color: var(--react-autoql-accent-color, #26a7df);
+      .react-autoql-select-arrow {
+        color: var(--react-autoql-accent-color, #26a7df);
+      }
     }
-  }
 
-  .react-autoql-select-text {
-    display: block;
-    height: 100%;
+    &:not(.outlined) {
+      font-weight: 600;
+      padding: 0 10px;
+    }
 
-    .react-autoql-select-text-placeholder {
+    &.outlined {
+      padding: 0px 16px;
+      color: var(--react-autoql-text-color-primary);
+      border: 1px solid var(--react-autoql-border-color);
+      border-radius: 4px;
+      background: var(--react-autoql-background-color-secondary, white);
+
+      &.react-autoql-select-small {
+        padding: 0px 14px;
+      }
+
+      &:hover {
+        color: var(--react-autoql-accent-color);
+        border-color: var(--react-autoql-accent-color);
+      }
+    }
+
+    .react-autoql-select-text {
+      display: block;
+      height: 100%;
+
+      .react-autoql-select-text-placeholder {
+        color: var(--react-autoql-text-color-placeholder);
+        font-style: italic;
+      }
+    }
+
+    .react-autoql-select-arrow {
+      display: flex;
+      align-items: center;
+      padding-left: 8px;
+      font-size: 0.875em;
       color: var(--react-autoql-text-color-placeholder);
-      font-style: italic;
     }
-  }
-
-  .react-autoql-select-arrow {
-    display: flex;
-    align-items: center;
-    padding-left: 8px;
-    font-size: 0.875em;
-    color: var(--react-autoql-text-color-placeholder);
   }
 }
 
@@ -61,11 +85,21 @@
   overflow-y: auto;
 
   .react-autoql-select-option {
-    & > span {
+    .select-option-span {
       display: flex;
       flex-direction: row;
       align-items: center;
       justify-content: flex-start;
+
+      .select-option-value-container {
+        display: flex;
+        flex-direction: column;
+
+        .select-option-value-subtitle {
+          font-size: 0.875em;
+          opacity: 0.8;
+        }
+      }
     }
 
     &.active {
@@ -81,10 +115,7 @@
 
     li {
       color: var(--react-autoql-text-color-primary);
-      width: 100%;
-      height: 35px;
-      line-height: 35px;
-      padding: 0 20px;
+      padding: 10px 20px;
       cursor: pointer;
 
       &:hover {
