--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -74,6 +74,9 @@
   }
 
   .react-autoql-modal-header-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 17px;
     margin: 3px;
 
