--- a/src/components/Radio/Radio.scss
+++ b/src/components/Radio/Radio.scss
@@ -12,6 +12,10 @@
       display: inline-flex;
       justify-content: center;
       align-items: center;
+
+      &.active {
+        font-weight: 500;
+      }
     }
   }
 
