fix safetynet select styles

--- a/src/components/Charts/Axis/Axis.scss
+++ b/src/components/Charts/Axis/Axis.scss
@@ -167,7 +167,7 @@ g.legendOrdinal tspan {
       }
     }
 
-    .react-autoql-select.agg-type-symbol {
+    .agg-type-symbol .react-autoql-select {
       font-weight: 600;
       font-size: 12px;
       height: 26px;
