--- a/src/components/Notifications/NotificationIcon/NotificationIcon.scss
+++ b/src/components/Notifications/NotificationIcon/NotificationIcon.scss
@@ -12,6 +12,8 @@
     font-size: 1em;
     height: 1em;
     width: 1em;
+    padding: 0;
+    margin: 0;
   }
 
   .react-autoql-notifications-badge {
