--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -4,6 +4,11 @@
   padding: 10px 0;
   margin: 0;
 
+  &.has-subtitles .react-autoql-menu-item-title {
+    font-weight: 500;
+    opacity: 0.9;
+  }
+
   .react-autoql-menu-item {
     color: var(--react-autoql-text-color-primary);
     padding: 10px 20px;
@@ -12,10 +17,6 @@
     &:hover,
     &.active {
       background: var(--react-autoql-hover-color);
-    }
-
-    .react-autoql-menu-item-title {
-      font-weight: 500;
     }
 
     .react-autoql-menu-item-title {
