--- a/src/components/Notifications/DataAlerts/DataAlerts.scss
+++ b/src/components/Notifications/DataAlerts/DataAlerts.scss
@@ -1,5 +1,5 @@
 .react-autoql-notification-settings {
-  background-color: var(--react-autoql-background-color-primary);
+  background-color: transparent;
   color: var(--react-autoql-text-color-primary);
   padding-top: 20px;
   padding-bottom: 100px;
