--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -3,6 +3,7 @@
   width: 100%;
   padding: 10px 0;
   margin: 0;
+  max-height: 200px;
 
   &.has-subtitles .react-autoql-menu-item-title {
     font-weight: 500;
