--- a/src/components/Notifications/ScheduleBuilder/ScheduleBuilder.scss
+++ b/src/components/Notifications/ScheduleBuilder/ScheduleBuilder.scss
@@ -51,8 +51,13 @@
 
     .react-autoql-data-alert-frequency-option {
       &.check-frequency {
+        display: flex;
         width: 300px;
         max-width: 100%;
+
+        .react-autoql-select-and-label {
+          flex: 1;
+        }
       }
 
       &.flex-1 {
