fix: dashboard placeholder text for unexecuted and no-query

--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -125,10 +125,14 @@
 }
 
 .react-autoql-dashboard-tile-inner-div {
-  .single-value-response {
-    font-size: 32px;
-    margin-top: -6px;
-    opacity: 0.9;
+  .single-value-response-flex-container {
+    display: flex;
+    align-items: center;
+
+    .single-value-response {
+      font-size: 32px;
+      opacity: 0.9;
+    }
   }
 
   .tabulator-header-contents {
@@ -483,7 +487,9 @@
 .dashboard-tile-placeholder-text {
   font-size: 15px;
   color: var(--react-autoql-text-color-placeholder, rgba(0, 0, 0, 0.3));
-  padding: 0 10px;
+  padding: 0 20px;
+  margin-bottom: 30px;
+  font-style: italic;
 
   .play-icon {
     vertical-align: bottom;
