--- a/src/components/Notifications/NotificationIcon/NotificationIcon.scss
+++ b/src/components/Notifications/NotificationIcon/NotificationIcon.scss
@@ -4,6 +4,7 @@
   font-size: inherit;
   line-height: 1em;
   width: 1em;
+  height: 1em;
 
   .react-autoql-notifications-button {
     font-size: 1em;
@@ -33,7 +34,7 @@
     border-radius: 50%;
     height: 0.6em;
     width: 0.6em;
-    left: 0.5em;
-    top: -2px;
+    top: -0.2em;
+    right: -0.2em;
   }
 }
