--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -245,6 +245,8 @@
       color: inherit;
       cursor: unset;
       font-size: 20px;
+      font-weight: 400;
+
       &:hover {
         color: inherit;
       }
