--- a/src/components/Notifications/DataAlerts/DataAlerts.scss
+++ b/src/components/Notifications/DataAlerts/DataAlerts.scss
@@ -197,6 +197,7 @@
         transition: background-color 0.2s ease;
         padding: 4px;
         margin-left: 7px;
+        margin-right: 0;
         box-sizing: content-box;
         font-size: 11px;
         border-radius: 20px;
