--- a/src/components/ChatMessage/ChatMessage.scss
+++ b/src/components/ChatMessage/ChatMessage.scss
@@ -130,6 +130,11 @@
       visibility: visible;
       opacity: 1;
     }
+	.react-autoql-toolbar-mobile {
+	  pointer-events: auto;
+	  visibility: visible;
+	  opacity: 1;
+	}
   }
 }
 
