feat: 🎸 disable tranformation for webapp PWA

--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -143,6 +143,9 @@
     font-size: 18px;
     letter-spacing: 0.05em;
   }
+  .react-autoql-drawer .drawer-content-wrapper{
+	transform: unset !important;
+  }
 }
 @media (min-width: 480px) {
   .react-autoql-drawer .react-autoql-header-center-container {
