fix: padding in data alert settings modal

--- a/src/components/Notifications/DataAlertModal/DataAlertSettings.scss
+++ b/src/components/Notifications/DataAlertModal/DataAlertSettings.scss
@@ -1,3 +1,7 @@
+.data-alert-settings-modal-content {
+  padding: 20px 100px;
+}
+
 .react-autoql-data-alert-setting-group {
   display: flex;
   flex-direction: row;
