--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
+// fallback variables
+:root {
+  --react-autoql-danger-color-default: #ca0b00;
+}
+
 .react-autoql-spinner-centered {
   width: 100%;
   text-align: center;
