--- a/src/components/ChataTable/ChataTable.scss
+++ b/src/components/ChataTable/ChataTable.scss
@@ -140,6 +140,7 @@
       opacity: 0;
       visibility: hidden;
       pointer-events: none;
+      line-height: 14px;
     }
 
     .react-autoql-tabulator-container .tabulator-tableholder {
