--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -33,8 +33,8 @@
 // State
 .react-autoql-btn.disabled {
   opacity: 0.4;
-  cursor: not-allowed;
-  pointer-events: none;
+  cursor: not-allowed !important;
+  pointer-events: none !important;
 }
 
 // Size
