--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -30,9 +30,8 @@
 
 .react-autoql-response-content-container.table {
   max-height: 100vh !important; // this safety net forces progressive rendering
-  overflow-y: scroll;
-  scrollbar-width: none;
   margin-bottom: 0 !important;
+  overflow-y: auto;
   height: 100%;
   width: 100%;
 }
