--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -32,7 +32,7 @@
 
   margin-top: 20px;
   margin-bottom: 30px;
-  max-width: 90vw;
+  max-width: calc(100vw - 160px);
   max-height: calc(100vh - 90px);
 
   input.react-autoql-input,
