--- a/src/components/Notifications/DataAlerts/DataAlerts.scss
+++ b/src/components/Notifications/DataAlerts/DataAlerts.scss
@@ -13,7 +13,7 @@
     .data-alert-section-cycle,
     .data-alert-state,
     .data-alert-section-cycle-start {
-      opacity: 0.7;
+      opacity: 0.5;
     }
   }
 
@@ -39,6 +39,7 @@
       justify-content: center;
       align-items: center;
       font-size: 13px;
+      cursor: default;
     }
 
     .data-alert-section-content {
@@ -58,7 +59,6 @@
     &:last-child {
       flex: 0 0 auto;
       padding-right: 12px;
-      justify-content: flex-end;
     }
   }
 
